update frontend component

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -22,3 +22,9 @@ a {
   padding-top: 25px;
   border-top: 1px solid #efefef;
 }
+
+.filter {
+  padding: 15px;
+  background-color: rgba(211, 211, 211, 0.3);
+  border-radius: 4px;
+}
